--- a/intro.ipynb
+++ b/intro.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d431e960",
+   "id": "9053c7bc",
    "metadata": {},
    "source": [
     "# Quantitative Economics with JAX\n",
@@ -13,20 +13,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c540e22",
+   "id": "0b9b6f99",
    "metadata": {},
    "source": [
     "# Introduction\n",
     "\n",
     "- [About](https://jax.quantecon.org/about.html)\n",
     "- [An Introduction to JAX](https://jax.quantecon.org/jax_intro.html)\n",
-    "- [Newton’s Method via JAX](https://jax.quantecon.org/newtons_method.html)\n",
-    "- [An Asset Pricing Problem](https://jax.quantecon.org/markov_asset.html)"
+    "- [Newton’s Method via JAX](https://jax.quantecon.org/newtons_method.html)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c15a4b3a",
+   "id": "be382801",
    "metadata": {},
    "source": [
     "# Simulation\n",
@@ -38,17 +37,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ab292cc",
+   "id": "372a7b09",
    "metadata": {},
    "source": [
-    "# Data and Empirics\n",
+    "# Asset Pricing\n",
     "\n",
-    "- [Maximum Likelihood Estimation](https://jax.quantecon.org/mle.html)"
+    "- [Asset Pricing: The Lucas Asset Pricing Model](https://jax.quantecon.org/lucas_model.html)\n",
+    "- [An Asset Pricing Problem](https://jax.quantecon.org/markov_asset.html)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "6bbb6fc7",
+   "id": "ef15a262",
    "metadata": {},
    "source": [
     "# Dynamic Programming\n",
@@ -66,7 +66,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f63580d",
+   "id": "14be1df6",
+   "metadata": {},
+   "source": [
+    "# Data and Empirics\n",
+    "\n",
+    "- [Maximum Likelihood Estimation](https://jax.quantecon.org/mle.html)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d3e0e3ec",
    "metadata": {},
    "source": [
     "# Other\n",
@@ -78,7 +88,7 @@
   }
  ],
  "metadata": {
-  "date": 1710464658.4319975,
+  "date": 1710624843.134877,
   "filename": "intro.md",
   "kernelspec": {
    "display_name": "Python",
