--- a/inventory_dynamics.ipynb
+++ b/inventory_dynamics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7f01a10e",
+   "id": "dcf33250",
    "metadata": {},
    "source": [
     "# Inventory Dynamics"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9ca738e",
+   "id": "2ea81279",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "daa090b1",
+   "id": "c024c37e",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ae00160",
+   "id": "496fdcdb",
    "metadata": {
     "hide-output": false
    },
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4a060f7",
+   "id": "01b24694",
    "metadata": {},
    "source": [
     "Here’s a description of our GPU:"
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9856a18",
+   "id": "fa586762",
    "metadata": {
     "hide-output": false
    },
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f64bfe8",
+   "id": "52920543",
    "metadata": {},
    "source": [
     "## Sample paths\n",
@@ -133,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ea735e2",
+   "id": "21f6e468",
    "metadata": {
     "hide-output": false
    },
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54043130",
+   "id": "9fb7e5af",
    "metadata": {},
    "source": [
     "## Cross-sectional distributions\n",
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4808659",
+   "id": "6775dd19",
    "metadata": {
     "hide-output": false
    },
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3e68b68",
+   "id": "9d1a494b",
    "metadata": {},
    "source": [
     "### For loop version\n",
@@ -224,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a8b5e82",
+   "id": "a145ff6d",
    "metadata": {
     "hide-output": false
    },
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e91feec",
+   "id": "d80232c7",
    "metadata": {},
    "source": [
     "We’ll use the following specification"
@@ -255,7 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "930ecc02",
+   "id": "9571dad6",
    "metadata": {
     "hide-output": false
    },
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7765ea83",
+   "id": "9a04b34b",
    "metadata": {},
    "source": [
     "Let’s look at the timing."
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "decf149a",
+   "id": "e6bb3328",
    "metadata": {
     "hide-output": false
    },
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a889dd48",
+   "id": "7f1c606b",
    "metadata": {
     "hide-output": false
    },
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "001aa264",
+   "id": "18d68a6c",
    "metadata": {},
    "source": [
     "Here’s a histogram of inventory levels at time $ T $."
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3acc01d0",
+   "id": "9cdf97a7",
    "metadata": {
     "hide-output": false
    },
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb637933",
+   "id": "90f5800d",
    "metadata": {},
    "source": [
     "### Compiling the outer loop\n",
@@ -345,7 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0bfbe05",
+   "id": "adde5aa6",
    "metadata": {
     "hide-output": false
    },
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "415e3008",
+   "id": "84e7ed52",
    "metadata": {},
    "source": [
     "Let’s see how fast this runs with compile time."
@@ -393,7 +393,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f2a3fbe",
+   "id": "6e6bf6c7",
    "metadata": {
     "hide-output": false
    },
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6aa81963",
+   "id": "b5234b30",
    "metadata": {},
    "source": [
     "And let’s see how fast it runs without compile time."
@@ -414,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f3e1d89",
+   "id": "e6ce7b95",
    "metadata": {
     "hide-output": false
    },
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a22b279",
+   "id": "137b88a5",
    "metadata": {},
    "source": [
     "Compared to the original version with a pure Python outer loop, we have\n",
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6618d16b",
+   "id": "f629aba1",
    "metadata": {},
    "source": [
     "### Further vectorization\n",
@@ -451,7 +451,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b27184c",
+   "id": "45cc46f0",
    "metadata": {
     "hide-output": false
    },
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5d2bbb1",
+   "id": "8ba03075",
    "metadata": {},
    "source": [
     "Let’s test it with compile time included."
@@ -490,7 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3f7a8f3",
+   "id": "bc62636e",
    "metadata": {
     "hide-output": false
    },
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e4dbde2",
+   "id": "b65a86d7",
    "metadata": {},
    "source": [
     "Let’s run again to eliminate compile time."
@@ -511,7 +511,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6687e9fd",
+   "id": "6b2557bb",
    "metadata": {
     "hide-output": false
    },
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f3b314e",
+   "id": "6c39cf7a",
    "metadata": {},
    "source": [
     "On one hand, this version is faster than the previous one, where random variables were\n",
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f24b6a3",
+   "id": "6b88e577",
    "metadata": {},
    "source": [
     "## Distribution dynamics\n",
@@ -553,7 +553,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0f04bfc",
+   "id": "b58a89d3",
    "metadata": {
     "hide-output": false
    },
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6c283d4",
+   "id": "354355f7",
    "metadata": {},
    "source": [
     "Let’s test it"
@@ -590,7 +590,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac77b026",
+   "id": "5c680b66",
    "metadata": {
     "hide-output": false
    },
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1ad6e89",
+   "id": "c560330c",
    "metadata": {},
    "source": [
     "Let’s plot the output."
@@ -617,7 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "553ca2c5",
+   "id": "4d0ab7cc",
    "metadata": {
     "hide-output": false
    },
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "291bc521",
+   "id": "d056f09a",
    "metadata": {},
    "source": [
     "This model for inventory dynamics is asymptotically stationary, with a unique\n",
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3a84768",
+   "id": "e759282f",
    "metadata": {},
    "source": [
     "## Restock frequency\n",
@@ -677,7 +677,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d501986b",
+   "id": "929be715",
    "metadata": {},
    "source": [
     "### For loop version\n",
@@ -688,7 +688,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0fe5e4a7",
+   "id": "f3385353",
    "metadata": {
     "hide-output": false
    },
@@ -730,7 +730,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf7d6e4b",
+   "id": "9d72ffca",
    "metadata": {
     "hide-output": false
    },
@@ -743,10 +743,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0123d549",
+   "id": "4b4d4d58",
    "metadata": {},
    "source": [
-    "### Exercise 5.1\n",
+    "### Exercise 4.1\n",
     "\n",
     "Write a `fori_loop` version of the last function.  See if you can increase the\n",
     "speed while generating a similar answer."
@@ -754,10 +754,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "732dfbaa",
+   "id": "266b8a8d",
    "metadata": {},
    "source": [
-    "### Solution to[ Exercise 5.1](https://jax.quantecon.org/#inventory_dynamics_ex1)\n",
+    "### Solution to[ Exercise 4.1](https://jax.quantecon.org/#inventory_dynamics_ex1)\n",
     "\n",
     "Here is a `lax.fori_loop` version that JIT compiles the whole function"
    ]
@@ -765,7 +765,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1bb2f6d3",
+   "id": "3ba26ff8",
    "metadata": {
     "hide-output": false
    },
@@ -809,7 +809,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "abce57f8",
+   "id": "4836d317",
    "metadata": {},
    "source": [
     "Note the time the routine takes to run, as well as the output"
@@ -818,7 +818,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c359d85",
+   "id": "638118e1",
    "metadata": {
     "hide-output": false
    },
@@ -832,7 +832,7 @@
   }
  ],
  "metadata": {
-  "date": 1710464658.466083,
+  "date": 1710624843.1701567,
   "filename": "inventory_dynamics.md",
   "kernelspec": {
    "display_name": "Python",
