--- a/wealth_dynamics.ipynb
+++ b/wealth_dynamics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1198267c",
+   "id": "b817c9c8",
    "metadata": {},
    "source": [
     "# Wealth Distribution Dynamics"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8bd3eea2",
+   "id": "bd8a7be4",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1fda265",
+   "id": "dd7ea614",
    "metadata": {
     "hide-output": false
    },
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be0677da",
+   "id": "2f416198",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16afb727",
+   "id": "7728d525",
    "metadata": {
     "hide-output": false
    },
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31fd5e6e",
+   "id": "346512b0",
    "metadata": {},
    "source": [
     "## Lorenz Curves and the Gini Coefficient\n",
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b07e5255",
+   "id": "acc1c61c",
    "metadata": {},
    "source": [
     "### Lorenz Curves\n",
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c55cb472",
+   "id": "9d0fd50c",
    "metadata": {
     "hide-output": false
    },
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "acfd5f64",
+   "id": "94b44bcd",
    "metadata": {},
    "source": [
     "Let’s suppose that"
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd67b8eb",
+   "id": "906883ef",
    "metadata": {
     "hide-output": false
    },
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98e604ae",
+   "id": "85fb68b3",
    "metadata": {},
    "source": [
     "is data representing the wealth of 10,000 households.\n",
@@ -141,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89d342bf",
+   "id": "93d99590",
    "metadata": {
     "hide-output": false
    },
@@ -155,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1dc0855",
+   "id": "44426201",
    "metadata": {
     "hide-output": false
    },
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ecda8ca",
+   "id": "9e238114",
    "metadata": {
     "hide-output": false
    },
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2bff1629",
+   "id": "7a0db875",
    "metadata": {},
    "source": [
     "Here is another example, which shows how the Lorenz curve shifts as the\n",
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a23d2324",
+   "id": "b54daf4a",
    "metadata": {
     "hide-output": false
    },
@@ -212,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d43df05",
+   "id": "b848c100",
    "metadata": {
     "hide-output": false
    },
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84411771",
+   "id": "89032ab1",
    "metadata": {},
    "source": [
     "You can see that, as the tail parameter of the Pareto distribution increases, inequality decreases.\n",
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3b118ff",
+   "id": "45e2badd",
    "metadata": {},
    "source": [
     "### The Gini Coefficient\n",
@@ -262,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5532a719",
+   "id": "962d2484",
    "metadata": {
     "hide-output": false
    },
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9a00e1c",
+   "id": "cc447c2b",
    "metadata": {},
    "source": [
     "Let’s see if the Gini coefficient computed from a simulated sample matches\n",
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4358d3bf",
+   "id": "baf25deb",
    "metadata": {
     "hide-output": false
    },
@@ -314,7 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d44ebb0",
+   "id": "9b4fb770",
    "metadata": {
     "hide-output": false
    },
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1da490c5",
+   "id": "3f2528a3",
    "metadata": {},
    "source": [
     "The simulation shows that the fit is good."
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "526b1250",
+   "id": "071fdbf2",
    "metadata": {},
    "source": [
     "## A Model of Wealth Dynamics\n",
@@ -351,7 +351,7 @@
     "\n",
     "<a id='equation-wealth-dynam-ah'></a>\n",
     "$$\n",
-    "w_{t+1} = (1 + r_{t+1}) s(w_t) + y_{t+1} \\tag{7.1}\n",
+    "w_{t+1} = (1 + r_{t+1}) s(w_t) + y_{t+1} \\tag{6.1}\n",
     "$$\n",
     "\n",
     "where\n",
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b308242",
+   "id": "aeb0c8d6",
    "metadata": {},
    "source": [
     "## Implementation using JAX\n",
@@ -375,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a1d8999",
+   "id": "c10dda82",
    "metadata": {
     "hide-output": false
    },
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "428b7476",
+   "id": "ab74f96e",
    "metadata": {},
    "source": [
     "Here’s a function to create the Model with the given parameters"
@@ -399,7 +399,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5622d411",
+   "id": "de832870",
    "metadata": {
     "hide-output": false
    },
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1edba954",
+   "id": "32bdde94",
    "metadata": {},
    "source": [
     "The following function updates one period with the given current wealth and persistent state."
@@ -446,7 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b32532dd",
+   "id": "5acf864a",
    "metadata": {
     "hide-output": false
    },
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20672bb1",
+   "id": "3915471b",
    "metadata": {},
    "source": [
     "Here’s function to simulate the time series of wealth for individual households using a `for` loop and JAX."
@@ -485,7 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f64b194f",
+   "id": "35a50f03",
    "metadata": {
     "hide-output": false
    },
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad167494",
+   "id": "e036e16f",
    "metadata": {},
    "source": [
     "Let’s try simulating the model at different parameter values and investigate the implications for the wealth distribution using the above function."
@@ -533,7 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f4875a7",
+   "id": "a2eb71f1",
    "metadata": {
     "hide-output": false
    },
@@ -547,7 +547,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3465a83d",
+   "id": "e83d1f4b",
    "metadata": {
     "hide-output": false
    },
@@ -562,7 +562,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9fb83ac",
+   "id": "1d474986",
    "metadata": {
     "hide-output": false
    },
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73f42dbc",
+   "id": "70cb44d9",
    "metadata": {},
    "source": [
     "We can further try to optimize and speed up the compile time of the above function by replacing `for` loop with [`jax.lax.scan`](https://jax.readthedocs.io/en/latest/_autosummary/jax.lax.scan.html)."
@@ -584,7 +584,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b56f7ce2",
+   "id": "293b67bb",
    "metadata": {
     "hide-output": false
    },
@@ -630,7 +630,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a361ffdf",
+   "id": "aa7aaa13",
    "metadata": {},
    "source": [
     "Let’s try simulating the model at different parameter values and investigate the implications for the wealth distribution and also observe the difference in time between `wealth_time_series_jax` and `wealth_time_series_for_loop_jax`."
@@ -639,7 +639,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1d88058",
+   "id": "9d01e1c5",
    "metadata": {
     "hide-output": false
    },
@@ -653,7 +653,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da21e0e7",
+   "id": "93357017",
    "metadata": {
     "hide-output": false
    },
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "067bdf97",
+   "id": "d6024ba2",
    "metadata": {},
    "source": [
     "Running the above function again will be even faster because of JAX’s JIT."
@@ -675,7 +675,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d187a74",
+   "id": "cf39ba4a",
    "metadata": {
     "hide-output": false
    },
@@ -690,7 +690,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf4a7ce6",
+   "id": "e4dcb63b",
    "metadata": {
     "hide-output": false
    },
@@ -703,7 +703,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a2eeb92",
+   "id": "12e6ea7f",
    "metadata": {},
    "source": [
     "Now here’s function to simulate a cross section of households forward in time."
@@ -712,7 +712,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2452299d",
+   "id": "f120ab79",
    "metadata": {
     "hide-output": false
    },
@@ -742,7 +742,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1ad2e3e",
+   "id": "493eaf8c",
    "metadata": {},
    "source": [
     "## Applications\n",
@@ -753,7 +753,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa2076e4",
+   "id": "ab38843b",
    "metadata": {},
    "source": [
     "### Inequality Measures\n",
@@ -767,7 +767,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59f1d8e7",
+   "id": "cf7c8fe2",
    "metadata": {
     "hide-output": false
    },
@@ -790,7 +790,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c95e6f61",
+   "id": "ff61f849",
    "metadata": {},
    "source": [
     "Now we investigate how the Lorenz curves associated with the wealth distribution change as return to savings varies.\n",
@@ -801,7 +801,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94a12586",
+   "id": "d739a23a",
    "metadata": {
     "hide-output": false
    },
@@ -826,7 +826,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9972fb82",
+   "id": "277701fc",
    "metadata": {},
    "source": [
     "The Lorenz curve shifts downwards as returns on financial income rise, indicating a rise in inequality.\n",
@@ -837,7 +837,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d06dcd9",
+   "id": "7b99ef03",
    "metadata": {
     "hide-output": false
    },
@@ -852,7 +852,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2ef9f6f",
+   "id": "904da56a",
    "metadata": {},
    "source": [
     "Once again, we see that inequality increases as returns on financial income\n",
@@ -865,7 +865,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "547760cf",
+   "id": "263337ad",
    "metadata": {
     "hide-output": false
    },
@@ -890,7 +890,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c194af64",
+   "id": "8f3d5c1a",
    "metadata": {},
    "source": [
     "We see that greater volatility has the effect of increasing inequality in this model."
@@ -898,7 +898,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb1a4369",
+   "id": "e4cc7bee",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -906,10 +906,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1296e5c6",
+   "id": "c7bddc8d",
    "metadata": {},
    "source": [
-    "## Exercise 7.1\n",
+    "## Exercise 6.1\n",
     "\n",
     "For a wealth or income distribution with Pareto tail, a higher tail index suggests lower inequality.\n",
     "\n",
@@ -931,10 +931,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e46ea557",
+   "id": "7c2f4e89",
    "metadata": {},
    "source": [
-    "## Solution to[ Exercise 7.1](https://jax.quantecon.org/#wd_ex1)\n",
+    "## Solution to[ Exercise 6.1](https://jax.quantecon.org/#wd_ex1)\n",
     "\n",
     "Here is one solution, which produces a good match between theory and\n",
     "simulation."
@@ -943,7 +943,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b095784c",
+   "id": "0a5dbc03",
    "metadata": {
     "hide-output": false
    },
@@ -967,7 +967,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46040314",
+   "id": "a756245b",
    "metadata": {},
    "source": [
     "In general, for a Pareto distribution, a higher tail index implies less weight\n",
@@ -980,17 +980,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a4f87ff",
+   "id": "93c9012a",
    "metadata": {},
    "source": [
-    "## Exercise 7.2\n",
+    "## Exercise 6.2\n",
     "\n",
     "When savings is constant, the wealth process has the same quasi-linear\n",
     "structure as a Kesten process, with multiplicative and additive shocks.\n",
     "\n",
     "The Kesten–Goldie theorem tells us that Kesten processes have Pareto tails under a range of parameterizations.\n",
     "\n",
-    "The theorem does not directly apply here, since savings is not always constant and since the multiplicative and additive terms in [(7.1)](#equation-wealth-dynam-ah) are not IID.\n",
+    "The theorem does not directly apply here, since savings is not always constant and since the multiplicative and additive terms in [(6.1)](#equation-wealth-dynam-ah) are not IID.\n",
     "\n",
     "At the same time, given the similarities, perhaps Pareto tails will arise.\n",
     "\n",
@@ -1006,7 +1006,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62879de7",
+   "id": "72a382f5",
    "metadata": {
     "hide-output": false
    },
@@ -1019,10 +1019,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50c2f911",
+   "id": "8e3d9534",
    "metadata": {},
    "source": [
-    "## Solution to[ Exercise 7.2](https://jax.quantecon.org/#wd_ex2)\n",
+    "## Solution to[ Exercise 6.2](https://jax.quantecon.org/#wd_ex2)\n",
     "\n",
     "First let’s generate the distribution:"
    ]
@@ -1030,7 +1030,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16508a8f",
+   "id": "e8dc01fa",
    "metadata": {
     "hide-output": false
    },
@@ -1047,7 +1047,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e40b0b12",
+   "id": "dcf7a6c1",
    "metadata": {},
    "source": [
     "Let’s define a function to get the rank data"
@@ -1056,7 +1056,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd18c381",
+   "id": "508944b7",
    "metadata": {
     "hide-output": false
    },
@@ -1072,7 +1072,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f081895",
+   "id": "f0fb8cb1",
    "metadata": {},
    "source": [
     "Now let’s see the rank-size plot:"
@@ -1081,7 +1081,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd23b5b4",
+   "id": "c86cc9b8",
    "metadata": {
     "hide-output": false
    },
@@ -1099,7 +1099,7 @@
   }
  ],
  "metadata": {
-  "date": 1710464659.079966,
+  "date": 1710624843.8628583,
   "filename": "wealth_dynamics.md",
   "kernelspec": {
    "display_name": "Python",
